# extraction-of-posts-about-politics-in-brazil

./: .gitignore  README.md  keywords.txt  main.py  pyproject.toml  requirements.txt
config/: extraction.yml  keywords.txt
src/extractor/: blusky.py  models.py  orchestrator.py  reddit.py  x.py
src/persist/: postgres_control_plane.py  s3_raw_posts.py
src/persist/migration/: 001_create_extraction_control_plane.sql
