[project]
name = "extraction-of-posts-about-politics-in-brazil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.96",
    "playwright>=1.58.0",
    "praw>=7.8.1",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
]
